[package]
name = "aori_ob_snapshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.5.3"
eyre = "0.6.11"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tungstenite = "0.21.0"
